--- a/src/example1.fountain
+++ b/src/example1.fountain
@@ -2,3 +2,9 @@ Title: Big Fish
 Credit: written by
 Author: John August
 Source: based on the novel by Daniel Wallace
+Notes:
+	FINAL PRODUCTION DRAFT
+	includes post-production dialogue
+	and omitted scenes
+
+
