--- a/src/example1.fountain
+++ b/src/example1.fountain
@@ -1,6 +1,9 @@
 Title: Big Fish
+Credit: written by
+Author: John August
+Source: based on the novel by Daniel Wallace
 Notes:
 	FINAL PRODUCTION DRAFT
+	includes post-production dialogue
+	and omitted scenes
 Copyright: (c) 2003 Columbia Pictures
-
-
